# ocl-resize-proxy

./: .gitignore  Cargo.toml  README.md
src/: bench.rs  cli.rs  main.rs  server.rs
src/actors/: mod.rs
src/actors/ocl_executor/: error.rs  mod.rs
src/controllers/: mod.rs  resize.rs
src/controllers/resize/: mod.rs  ocl-resizer-kernel.cl
src/lib/: elapsed.rs  mod.rs
src/lib/resize/: mod.rs  ocl-resizer-kernel.cl
