[package]
authors = ["Mathieu Amiot <m.amiot@otak-arts.com>"]
name = "ocl-image-resizer"
version = "0.1.0"

[[bin]]
name = "ocl-resizer-cli"
path = "src/cli.rs"

[[bin]]
name = "ocl-resizer-server"
path = "src/server.rs"

[dependencies]
actix = "0.5"
clap = "2.32"
env_logger = "0.5"
failure = "0.1.1"
futures = "0.1"
image = "0.19"
log = "0.4"
ocl = "0.18"
percent-encoding = "1.0.1"

[dependencies.actix-web]
version = "0.6"
default-features = false
features = ["tls"]
